--- a/tamas.html
+++ b/tamas.html
@@ -40,6 +40,7 @@
     نام خانوادگی: <br><input type="text" name="lastname"><br>
      ایمیل: <br><input type="text" name="email"><br>
     <br>
+    پیام: <br><input type="text" name="note" width = "100"  height="100"><br>
   <input  type="button" onclick=payam() value="Submit">
 </form>
 
